# tc

./: .gitignore  .travis.yml  Environment.hs  Expression.hs  Level.hs  Name.hs  README.md  Test.hs  TypeChecker.hs  leantc.cabal  stack.yaml
app/: Main.hs
src/: Environment.hs  EquivManager.hs  Expression.hs  Inductive.hs  Level.hs  Lexer.alex  Lib.hs  Main.hs  Name.hs  Parser.y  TypeChecker.hs  Util.hs
src/Frontend/: Parser.hs
src/Kernel/: Expr.hs  Inductive.hs  Level.hs  Name.hs  Quotient.hs  TypeChecker.hs
src/Kernel/Expr/: Internal.hs
src/Kernel/Inductive/: Internal.hs
src/Kernel/Level/: Internal.hs
src/Kernel/Name/: Internal.hs
src/Kernel/TypeChecker/: Internal.hs
test/: ExprSpec.hs  ExpressionSpec.hs  InductiveSpec.hs  Integration.hs  LevelSpec.hs  Spec.hs  TypeCheckerSpec.hs
