name:                leantc
version:             0.1.0.0
synopsis:            Reference type checker for Lean Theorem Prover
description:         Please see README.md
homepage:            http://github.com/dselsam/leantc#readme
license:             GPL-3
license-file:        LICENSE
author:              Daniel Selsam
maintainer:          daniel.selsam@gmail.com
copyright:           2016 Daniel Selsam
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Kernel.Name, Kernel.Name.Internal, Kernel.Level, Kernel.Level.Internal, Kernel.Expr, Kernel.Expr.Internal, Kernel.TypeChecker.Internal, Kernel.TypeChecker, Kernel.Inductive.Internal, Kernel.Inductive, Frontend.Parser
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , lens-simple
                     , mtl
                     , transformers
                     , text
                     , parsec
  default-language:    Haskell2010
  ghc-options:         -O3 -threaded

executable leantc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
--  ghc-options:         -O3 -threaded -rtsopts -with-rtsopts=-N
  ghc-options:         -O3 -threaded
  build-depends:       base
                     , leantc
  default-language:    Haskell2010

test-suite leantc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
--  other-modules:       LevelSpec.hs, ExprSpec.hs, TypeCheckerSpec.hs, Integration.hs
  build-depends:       base
                     , leantc
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/leantc
